# hobby-projects

./: .gitignore  README.md
00-opencv-scanner/: 01_core.py  02_imgproc_1.py  03_imaproc_2.py  04_imgproc_3.py  05_caleb3d.py  README.md  main.py  pyproject.toml
01-hand-gesture-yolo/: .gitignore  LICENSE  METRICS.md  README.md  data_setup.py  demo.py  evaluate.py  export.py  infer.py  pyproject.toml  requirements.txt  train.py
01-hand-gesture-yolo/results/: metrics.json
